fix(toast): fix toast right icon spacing

--- a/css/src/components/toast.css
+++ b/css/src/components/toast.css
@@ -54,6 +54,7 @@
   padding-right: var(--spacing-m);
   padding-left: var(--spacing-m);
   height: var(--spacing-xl);
+  box-sizing: initial;
 }
 
 .Toast-icon--info,
